force-app/main/default/objects/ConditionChangeCheck__c/ConditionChangeCheck__c.object-meta.xml
<CustomObject>
    <label>条件変更チェック</label>
    <nameField>
        <displayFormat>CCC-{000000}</displayFormat>
        <label>条件変更チェック名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>