force-app/main/default/objects/ConditionChangeCheck__c/fields/OperatorCommnet__c.field-meta.xml
<CustomField>
    <fullName>OperatorCommnet__c</fullName>
    <label>OPコメント</label>
    <type>TextArea</type>
</CustomField>