force-app/main/default/objects/ConditionChangeCheck__c/fields/RecomfirmComment__c.field-meta.xml
<CustomField>
    <fullName>RecomfirmComment__c</fullName>
    <label>再査コメント</label>
    <type>TextArea</type>
</CustomField>